# mgenner-droid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sinriv/mgenner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/sinriv/midilib/: midiPlayerAIDL.aidl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/mgenner/: editTable.cpp  editTable.h  mgenner.cpp  midiLoader.cpp  midiMap.cpp  midisplit.cpp  note.h  player.cpp  player.h  synth.cpp  synth.h  synthOutput.cpp
app/src/main/cpp/midiPlayerService/: midiPlayerService.cpp  player.hpp  soundfont.hpp
app/src/main/java/com/sinriv/mgenner/: MainActivity.java
app/src/main/java/com/sinriv/midilib/mgenner/: instrument.java  mgenner_native.java  midiEditor.java  midiViewer.java  scrollGenerator.java  uiView.java
app/src/main/java/com/sinriv/midilib/midiPlayerService/: player.java  playerService.java
app/src/main/res/drawable/: ic_baseline_border_style_32.xml  ic_baseline_center_focus_strong_32.xml  ic_baseline_clear_all_32.xml  ic_baseline_insert_drive_file_48.xml  ic_baseline_stop_48.xml  ic_baseline_undo_32.xml  ic_chord.xml  ic_midi.xml  ic_voice_changer.xml
app/src/main/res/layout/: activity_midi_editor.xml  midieditor_instruments.xml  midieditor_set_file_name.xml  midieditor_setting.xml  midieditor_tempo_add.xml  prompt_dialog.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sinriv/mgenner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
